      (non integer) seconds.  Fixes \PR{17350}, thanks to new contributions
      by \I{LatinR}'s \sQuote{\I{R Dev Day}} participants, \I{Heather
      Turner} and \I{Dirk Eddelbuettel}.

      \item \code{options(scipen = NULL)} and other invalid values now
      signal an error instead of invalidating ops relying on a finite
      integer value.  Newly, values outside the range -9 .. 9999 are warned
      about and set to a respective boundary or to the default \code{0},
      e.g., in case of an \code{NA}.

      \item \code{isGeneric(fdef = print)} now works, fixing \PR{18369} thanks to
      \I{Mikael Jagan}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.2 patched}{
  \subsection{INSTALLATION}{
    \itemize{
      \item \R can be installed using C23 (for example with
      \option{-std=gnu23} or \option{-std=gnu2x}) with recent compilers
      including \command{gcc} 14, Apple \command{clang} 16 and LLVM
      \command{clang} 17--19.  (LLVM \command{clang} 18 and 19 objected
      to apparently valid code using attributes accepted by all the
      other compilers.)
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The functions \code{R_strtod} and \code{R_atof} now allow
      hexadecimal constants without an exponent, for compatibility with
      their C99 versions (\PR{18805}).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{kappa(A, exact=TRUE)} for singular \code{A} returns
      \code{Inf} more generally, fixing \PR{18817} reported by
      \I{Mikael Jagan}.

      \item Fixed URLs of the sun spots (\code{sunspot.month} etc) data
      sets and mention future changes due to recalibration.

      \item The parser now accepts hexadecimal constants with a decimal
      point without an exponent (taken as \code{p0}) as documented in
      \code{?NumericConstants} (\PR{18819}).
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.2}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{