@@ -389,12 +389,16 @@
 
       \item \code{options(scipen = NULL)} and other invalid values now
       signal an error instead of invalidating ops relying on a finite
-      integer value.  Newly, values outside the range -9 .. 9999 are warned
+      integer value.  Newly values outside the range -9 .. 9999 are warned
       about and set to a respective boundary or to the default \code{0},
       e.g., in case of an \code{NA}.
 
-      \item \code{isGeneric(fdef = print)} now works, fixing \PR{18369} thanks to
-      \I{Mikael Jagan}.
+      \item \code{isGeneric(fdef = print)} now works, fixing \PR{18369}
+      thanks to \I{Mikael Jagan}.
+
+      \item \code{cbind()} could segfault with \code{NULL} inputs.
+      (Seen when \R was built with \command{gcc14}, LTO and C99 inlining
+      semantics.)
     }
   }
 }
@@ -430,7 +434,11 @@
       \item The parser now accepts hexadecimal constants with a decimal
       point without an exponent (taken as \code{p0}) as documented in
       \code{?NumericConstants} (\PR{18819}).
-    }
+
+      \item \code{cbind()} now works correctly when inputs include a raw
+      vector and a logical, integer or double vector: previously the
+      includsion of latter was garbled.
+     }
   }
 }
 
